Количество говнокода нарастает......